completed-post-ids엔드포인트에서 List로 대량의 데이터를 가져오는 로직을 변경